unpackaged/main/default/objects/rh2__RH_Job__c/fields/rh2__ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>rh2__ApexClassName__c</fullName>
    <label>Class</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>