unpackaged/main/default/objects/rh2__RH_Job__c/fields/rh2__BatchSize__c.field-meta.xml
<CustomField>
    <fullName>rh2__BatchSize__c</fullName>
    <defaultValue>5000</defaultValue>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>