unpackaged/main/default/objects/rh2__RH_Job__c/fields/rh2__Filter__c.field-meta.xml
<CustomField>
    <fullName>rh2__Filter__c</fullName>
    <label>zDeprecated</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>