unpackaged/main/default/objects/rh2__RH_Job__c/fields/rh2__FixedFireTime__c.field-meta.xml
<CustomField>
    <fullName>rh2__FixedFireTime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is unchecked, daily scheduled jobs will run one day after the previous fire time.  If this is checked, daily scheduled jobs will run one day after the initial next fire time.</description>
    <inlineHelpText>If this is unchecked, daily scheduled jobs will run one day after the previous fire time.  If this is checked, daily scheduled jobs will run one day after the initial next fire time.</inlineHelpText>
    <label>Fixed Fire Time</label>
    <type>Checkbox</type>
</CustomField>