unpackaged/main/default/objects/rh2__RH_Job__c/fields/rh2__Increment__c.field-meta.xml
<CustomField>
    <fullName>rh2__Increment__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Increment</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>