unpackaged/main/default/objects/rh2__RH_Job__c/fields/rh2__NextFireTime__c.field-meta.xml
<CustomField>
    <fullName>rh2__NextFireTime__c</fullName>
    <label>Next Run</label>
    <type>DateTime</type>
</CustomField>