unpackaged/main/default/objects/rh2__RH_Job__c/fields/rh2__Parent_Condition_Name__c.field-meta.xml
<CustomField>
    <fullName>rh2__Parent_Condition_Name__c</fullName>
    <label>Parent Condition Name</label>
    <length>13</length>
    <type>Text</type>
</CustomField>