unpackaged/main/default/objects/rh2__RH_Job__c/listViews/rh2__All1.listView-meta.xml
<ListView>
    <fullName>rh2__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>